[tool.poetry]
name = "chapter-14-presentation"
version = "0.1.0"
description = ""
authors = ["Youwen Wu <youwenw@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
manim = "^0.18.0"
setuptools = "^69.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
